@@ -1,0 +1,5 @@
+
+noinst_LTLIBRARIES = libhamlib-cnctrk.la
+libhamlib_cnctrk_la_SOURCES = cnctrk.c
+
+EXTRA_DIST = Android.mk
