@@ -53,6 +53,7 @@ Version 3.0
 	    only when Winradio backend is enabled.
 	* New IC-M700PRO, IC-M710, IC-M802.
 	* New Icom ID-5100 model.
+	* New rotor, cnctrk by KI4SBL
 
 Version 1.2.15.3
 	2012-11-01
